Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138542

[Wayland] Cursor changes to resize arrows in the area of the app window

XMLWordPrintable

    • Linux/Wayland
    • f06fd493f (dev), 27e815887 (6.10)

      Linux Ubuntu 22.04.3 

      Qt Creator 17.0.0

      Qt 6.10.0 beta2

      Steps to reproduce:

      1. Run one of the widgets example apps, I used: https://doc.qt.io/qt-6/qtopengl-2dpainting-example.html 

       

      Expected: The cursor should not change its type.

      Actual: The cursor changes when it's in the window area. It doesn't change like that on Qt 6.9.2.

      Qt 6.10.0:

      Qt_6_10_0.webm

      Qt 6.9.2:

      Qt_6_9_2.webm

        1. cursor.mp4
          38 kB
        2. cursor-state-fix.diff
          3 kB
        3. cursor-state-fix-v2.diff
          3 kB
        4. Qt_6_10_0.webm
          3.68 MB
        5. Qt_6_9_2.webm
          2.95 MB
        6. wlcursor.tar.gz
          0.6 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davidedmundson David Edmundson
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes